# vikings

./: .gitignore  Cargo.toml  README.md
valheim-log-parser/: Cargo.toml
valheim-log-parser/examples/: build-active-state.rs
valheim-log-parser/src/: event.rs  lib.rs
valheim-watcher/: Cargo.toml  example_start_script.sh
valheim-watcher/src/: lib.rs  main.rs
