[package]
name = "valheim-watcher"
version = "0.1.0"
authors = ["Nick Pelone <nick.pelone@calyptix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valheim-log-parser = { path = "../valheim-log-parser" }
anyhow = "1.0.38"
nix = "0.20.0"
signal-hook = "0.3.7"
chrono = "0.4.19"
discord = { git = "https://github.com/SpaceManiac/discord-rs", branch = "master" }
rand = "0.8.0"